--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,42 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:0.9.0-M3'
+    }
+}
+
+sourceSets {
+    perf
+}
+
 dependencies {
+
+    perfCompile project
+
+    perfCompile 'org.openjdk.jmh:jmh-core:1.19'
+    perfCompile 'org.openjdk.jmh:jmh-generator-annprocess:1.19'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+apply plugin: "idea"
+idea {
+    module {
+        scopes.PROVIDED.plus  += configurations.perfCompile
+        scopes.PROVIDED.minus -= configurations.compile
+    }
+}
+
+task jmh(type: JavaExec, description: 'Executing JMH benchmarks') {
+    classpath = sourceSets.perf.runtimeClasspath
+    main = 'org.openjdk.jmh.Main'
 }
